# 3dpaper

./: CMakeLists.txt
Alice/: README.md
Alice/source/: curved_region.h  geodesic_line.h
Alice/source/legacy/: curved_region.cpp  different_parameter_example.cpp  mesh.h
Alice/use_examples/: example1.txt  example2.txt
html/: annotated.html  classGeodesic__line-members.html  classGeodesic__line.html  classPaper__Mesh-members.html  classPaper__Mesh.html  classes.html  dir_95d247d28d5b805c1da539781593a248.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  files.html  functions.html  functions_func.html  functions_vars.html  geodesic__line_8h_source.html  geometry__classes_8h_source.html  graph_legend.html  index.html  mesh_8h_source.html  structLine-members.html  structLine.html  structPoint-members.html  structPoint.html
html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_a.js  classes_0.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  searchdata.js
source/: CMakeLists.txt  curved_region.cpp  curved_region.h  geodesic_line.cpp  geodesic_line.h  geometry_classes.cpp  geometry_classes.h
source/legacy/: mesh.cpp
use_examples/: CMakeLists.txt  example3.txt  negative_values.cpp  ring_like.cpp  run_examples.cpp
